--- a/css/pizza-2.css
+++ b/css/pizza-2.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap&effect=fire');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
+/* Background images for each page */
 .home-background
 {
     height: 800px;
     background-image: url("../img/pizza-oven.jpg");
     background-size: cover;
-    
-
 }
 .order-background
 {
@@ -26,6 +25,7 @@
     background-image: url("../img/pizza-rome.jpg");
     background-size:cover;
 }
+/* Navigation menu and logo in top-left corner */
 nav
 {
     padding: 15px;
@@ -65,6 +65,7 @@ nav ul li a
     font-style: italic;
     text-shadow: 5px 5px 5px #F27F3D;
 }
+/* H1 on home, order and contact us page */
 h1
 {
     color: whitesmoke;
@@ -75,6 +76,7 @@ h1
     margin-top: 80px;
     margin-bottom: 0px;
 }
+/* h1 on about page*/
 h1.about-header
 {
     color: whitesmoke;
@@ -86,7 +88,7 @@ h1.about-header
     margin-bottom: 0px;
     margin-right:600px;
 }
-
+/* p on home and about page */
 p.home-text
 {
     color: whitesmoke;
@@ -99,11 +101,12 @@ p.about-text
 {
     color: whitesmoke;
     padding:15px 100px;
-    margin-right:600px;
+    margin-right:625px;
     font-family: 'Montserrat', sans-serif;
     line-height: 2;
     text-align: left;
 }
+/* order page */
 .order-form
 {
     margin:8px 175px;
@@ -117,7 +120,6 @@ input[type=checkbox]
     margin:10px 0px 10px 10px;
 
 }
-
 fieldset
 {
     color:whitesmoke;
@@ -144,8 +146,16 @@ input[type=submit]
     margin:10px 10px 30px 15px;
     background-color:#F27F3D;
 }
+/* form on contact page*/
+.contact-form
+{
+    font-family:'Monserrat', sans-serif;
+    color:whitesmoke;
+    text-shadow:-.5px .5px 0 #F27F3D,.5px .5px 0 #F27F3D, .5px -.5px 0 #F27F3D, -.5px -.5px 0 #F27F3D;
+    margin: 30px 150px;
+}
 
-
+/* Footer on home and about page */
 footer
 {
     background-color: #242424;
@@ -167,6 +177,7 @@ hr
     width:30%;
     box-shadow:2px 2px 5px #75A3BF;
 }
+/* hours and location boxes on home page*/
 .hours-box
 {
     margin:130px 390px 30px 390px;
@@ -181,19 +192,21 @@ hr
     border-radius: 15px;
 
 }
+/* h2 for "hours" and "location" in box on home page*/
 h2
 {
     color: #75A3BF;
     font-family:'Montserrat', sans-serif;
     text-align: center;
-
 }
+/* text in hours and location box */
 p
 {
     color: whitesmoke;
     font-family:'Montserrat', sans-serif;
     text-align: center;
 }
+/* 3 pictures of pizza on about page */
 .img-box1
 {
     height: 300px;
@@ -224,13 +237,13 @@ p
     display: inline-block;
     border-radius: 15%;
 }
+/* Container for 3 pizza images, ie img-box 1-2-3 */
 .img-box
 {
     margin-top:100px;
     text-align: center;
-
 }
-
+/* Nav menu on the bottom of home and about page */
 nav.footer-nav
 {
     margin-top: 75px;
@@ -255,13 +268,5 @@ nav.footer-nav ul li a
     padding: 15px 75px;
     color:whitesmoke;
     font-family: 'Monserrat', sans-serif;
-    font-style: italic;
-    
-}
-.contact-form
-{
-    font-family:'Monserrat', sans-serif;
-    color:whitesmoke;
-    text-shadow:-.5px .5px 0 #F27F3D,.5px .5px 0 #F27F3D, .5px -.5px 0 #F27F3D, -.5px -.5px 0 #F27F3D;
-    margin: 30px 150px;
+    font-style: italic;    
 }
